@@ -7,6 +7,7 @@
 - Options starting with `xml` are properly encoded when serialized.
 - Support for `/dev/folderpicker` to open a folder browser dialog.
 - Individual components are not shared across collections if they are configurable.
+- NuGet plugins support the nuget:?package={package}&version={version} format.
 
 
 1.1.1
